src/components/Popup/Popup.module.css
.popup {
  --background-color: #2b3bcd;
  position: absolute;
  top: 68vh;
  left: 2vw;
  width: 96vw;
  height: 15vh;

  padding: 15px;
  padding-left: 25px;
  color: white;
  background-color: var(--background-color);
  border: 1px solid white;
  border-radius: 30px;
  z-index: 1000;
  overflow: hidden;
  white-space: break-spaces;
}

.masDatosPopup {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.displayTitulo {
  font-size: 0.8rem;
  padding: 0vh 3vw;
  color: white;
}

.displayFecha {
  font-size: 0.8rem;
  color: white;
  padding-top: 2vh;
}

.displayLink {
  color: white;
  border: solid;
  padding: 0.5vh 1.5vw;
  border-color: white;
  border-width: 1px;
  border-radius: 25px;
  width: 30vw;
  height: 5vh;
}

/*celus mas grandes*/
@media (min-width: 400px) {
  .popup {
    position: absolute;
    top: 65vh;
    left: 2vw;
    width: 96vw;
    height: 17vh;
    padding: 15px;
    padding-left: 25px;
    color: white;
    background-color: var(--background-color);
    border: 1px solid white;
    border-radius: 30px;
    z-index: 1000;
    overflow: hidden;
    white-space: break-spaces;
  }
}

@media (min-width: 768px) {
  .popup {
    position: absolute;
    top: 60vh;
    left: 1vw;
    width: 28vw;
    height: 36vh;
    padding: 16px 8px;
    white-space: break-spaces;
  }

  .masDatosPopup {
    display: grid;
    grid-template-columns: 1fr;
  }

  .displayTitulo {
    font-size: 1rem;
  }

  .displayLink {
    width: 10vw;
    justify-self: center;
  }
}

@media (min-width: 1200px) {
  .displayLink {
    width: 8vw;
  }

  .popup {
    position: absolute;
    top: 63vh;
    left: 1vw;
    width: 18vw;
    height: 32vh;
    padding: 16px 8px;
    white-space: breakspaces;
  }
}

/* Taken from https://hackingui.com/a-pure-css-solution-for-multiline-text-truncation/ */
.multiline-text-with-ellipsis {
  /* hide text if it more than N lines  */
  overflow: hidden;
  /* to set '...' in absolute position */
  position: relative;
  line-height: 1em;
  /* max-height = line-height (1.2) * lines max number (3) */
  /* a few more pixels to avoid clipping the text*/
  max-height: 3.1em;
  /* fix problem when last visible word doesn't adjoin right side  */
  text-align: justify;
  /* place for '...' */
  padding-right: 1em;
  margin-right: 1em;
}
/* create the ... */
.multiline-text-with-ellipsis:before {
  /* show dots at the end */
  content: "...";
  position: absolute;
  /* set position to right bottom corner of block */
  right: 0;
  bottom: 0;
}
/* hide ... if we have text, which is less than or equal to max lines */
.multiline-text-with-ellipsis:after {
  /* hide dots at the end */
  content: "";
  position: absolute;
  /* set position to right bottom corner of text */
  right: 0;
  /* set width and height */
  width: 1em;
  height: 1em;
  margin-top: 0.2em;
  /* bg color same as parent bg color */
  background: var(--background-color);
}

